data/diff_tests/wasmtime/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_807.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\9b\80\80\80\00\02\04\6d\6f\64\31\05\66"
    "\75\6e\63\31\00\00\04\6d\6f\64\32\05\66\75\6e\63"
    "\32\00\00\03\82\80\80\80\00\01\00\0a\8f\80\80\80"
    "\00\01\89\80\80\80\00\00\01\10\00\01\10\01\01\0b"
  )
""
)